jdocify added to POM to be opened for test reflection jdocify developer further to care about new line and star character in the code part GeneratorTester was added to the engine module in testsupport package TestJdocify uses the GeneratorTester Source mock support stores the originals so it is possible to check with isModified Source mock support has proxy methods to isTouched and isModified so it can be checked in tests code gets touched when it is modified (or not) from lexical analysis (borrows and returns)